feat(Loading): Added loading component and button component.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
-#app {
+.app {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
 
   padding: 1rem;
+}
+
+@media screen and (min-width: 720px) {
+  .app {
+    grid-template-columns: 1fr 2fr;
+  }
 }
